--- a/src/styles.css
+++ b/src/styles.css
@@ -20,13 +20,15 @@ button {
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
-  font-size: 1em;
+  font-size: 1.5em;
   font-weight: 500;
   font-family: inherit;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
   color: #0f0f0f;
   background-color: #ffffff;
   transition: border-color 0.25s;
-  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
+  box-shadow: -1px 0 rgba(0, 0, 0, 0.2), 0 1px rgba(0, 0, 0, 0.2), 1px 0 rgba(0, 0, 0, 0.2), 0 -1px rgba(0, 0, 0, 0.2);
+  /* box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2); */
 }
 button:hover {
   border-color: #396cd8;
@@ -48,7 +50,7 @@ button:active {
   input,
   button {
     color: #ffffff;
-    background-color: #0f0f0f98;
+    background-color: #0f0f0f00;
   }
   button:active {
     background-color: #0f0f0f69;
@@ -65,18 +67,15 @@ body {
 .row {
   display: flex;
   flex-direction: row;
-  /* height: 100%; */
-  /* flex-grow: 1; */
 }
 .column {
   display: flex;
   flex-direction: column;
-  /* height: 100%; */
-  /* flex-grow: 1; */
+  justify-content: flex-end;
+  height: 100%;
 }
 
 .key {
-  /* height: var(--keysize); */
   font-size: 10px;
 }
 .u1 {
@@ -115,11 +114,8 @@ body {
   aspect-ratio: 6.25 / 1;
 }
 .key > button {
-  /* width: var(--keysize); */
-  /* height: var(--keysize); */
   width: 100%;
   height: 100%;
-  /* font-size: 1vh; */
 }
 
 .hidden {
