--- a/src/styles.css
+++ b/src/styles.css
@@ -13,13 +13,15 @@
   -webkit-text-size-adjust: 100%;
 
   --keysize: 50px;
-  --cursorsize: 20px; 
+  --cursorsize: 5px; 
+  --cursorcolor: #ff00007f;
+  --texthovercolor: #ff00007f;
 }
 input,
 button {
   border-radius: 8px;
   border: 1px solid transparent;
-  padding: 0.6em 1.2em;
+  /* padding: 0.6em 1.2em; */
   font-size: 1.5em;
   font-weight: 500;
   font-family: inherit;
@@ -32,6 +34,17 @@ button {
 }
 button:hover {
   border-color: #396cd8;
+}
+.cursor-hover > button {
+  color: var(--texthovercolor);
+  font-weight: bold;
+  font-size: 2.5em;
+  /* text-shadow:
+    3px 3px 0 white,
+    -3px 3px 0 white,
+    -3px -3px 0 white,
+    3px -3px 0 white; */
+  -webkit-text-stroke: 1px black;
 }
 button:active {
   border-color: #396cd8;
@@ -49,7 +62,7 @@ button:active {
 
   input,
   button {
-    color: #ffffff;
+    color: #ffffff7f;
     background-color: #0f0f0f00;
   }
   button:active {
@@ -126,6 +139,6 @@ body {
   position: absolute;
   width: var(--cursorsize);
   height: var(--cursorsize);
-  border: 2px red solid;
+  border: 2px var(--cursorcolor) solid;
   border-radius: var(--cursorsize);
 }
