--- a/src/styles.css
+++ b/src/styles.css
@@ -45,6 +45,7 @@ button:hover {
     -3px -3px 0 white,
     3px -3px 0 white; */
   -webkit-text-stroke: 1px black;
+  border-color: #396cd8;
 }
 button:active {
   border-color: #396cd8;
